style.css
@font-face {
    font-family: 'Arimo';
    font-style: italic;
    font-weight: 500;
    font-display: swap;
    src: url('fonts/arimo_latin.woff2') format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
    font-family: 'Trykker';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url('fonts/trykker_latin_ext.woff2') format('woff2');
    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}

@font-face {
    font-family: 'Trykker';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url('fonts/trykker_latin.woff2') format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

body {
    font-family: 'Trykker', serif;
    font-size: 1em;              
    max-width: 900px;
    padding: 2em;
    margin: 0 auto;
    background: #F5F5F0;
    text-align: justify;
    margin-bottom: 2em;
}

li {
    margin-bottom: 0.5em;
}

h1 {
    text-align: center;
    background-color: black;
    color: blanchedalmond;
}

h2{
    font-family: 'Arimo', sans-serif;
    margin-top: 2em;
    margin-bottom: 0;
}

h2:after {
    content:'';
    background: linear-gradient(to right, #777, #333, #777);
    display: block;
    height:1px;
    width: 900px;
    bottom: 0;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

h3{
    font-family: 'Arimo', sans-serif;
    margin-top: 1.5em;
    margin-bottom: 0.5em;
}

code{
    font-family: 'Courier New', Courier, monospace;
}

a {
    color: #005d5d;
}

img, video {
    border: none; 
    display: block;
    padding: 2em;
    margin: 0 auto;
    height: auto;
    width: 100%;
}

@media (max-width: 500px) { /* For small screen decices */
*{
    font-size: 12px; 
}
}   


blockquote {
    margin-top: 2em;
    margin-bottom: 2em;
    margin-left: 0;
    padding: 1em;
    border-left: 3px solid #ccc;
    font-style: italic;
} 

#navigation-bar {
    margin-top: 2em;
}

#navigation-bar:before {
    content:'';
    background: linear-gradient(to right, #777, #333, #777);
    display: block;
    height:1px;
    width: 900px;
    bottom: 0;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

#navigation-bar > hr {
    margin-bottom: 1em;
}

#navigation-bar > #navigate-left {
    float: left;
}

#navigation-bar > #navigate-right {
    float: right;
}

